# whook

./: .env.example  .gitignore  ARCHITECTURE.md  AUTH_SETUP_SUMMARY.md  Dockerfile  GOOGLE_OAUTH_SETUP.md  LICENSE  MIGRATION_SUMMARY.md  MODULARIZATION_SUMMARY.md  README.md  SETUP.md  app.py  docker-compose.yml  init_db.py  main.py  nginx.conf  pyproject.toml  requirements.txt  run.sh  start.sh  test_webhooks.py  worker.py
app/: __init__.py
app/core/: __init__.py  config.py  database.py  redis_client.py
app/models/: __init__.py  user.py  webhook.py
app/routes/: auth.py  webhooks.py  websocket.py
app/utils/: __init__.py  auth.py
static/css/: index.css  webhook_details.css
static/js/: index.js  webhook_details.js
templates/: index.html  login.html  settings.html  webhook_details.html
