[project]
name = "whook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "eventlet>=0.33.0",
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
    "flask-rq>=0.3.3",
    "flask-socketio>=5.0.0",
    "flask-sqlalchemy>=3.0.0",
    "gunicorn>=20.0.0",
    "python-dotenv>=0.19.0",
    "python-socketio>=5.0.0",
    "redis>=4.0.0",
    "requests>=2.32.4",
    "restrictedpython>=8.0",
    "rq>=1.10.0",
    "rq-dashboard>=0.8.3.2",
    "waitress==3.0.2",
    "werkzeug>=2.0.0",
]
